--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
             <section>
                 <div v-show="availableMovements" class="row mb-3 p-3">
                     <div class ="absolute">
-                        <a href="#dos" class="btn pokebutton">🡸</a>
+                        <a href="#dos" class="btn rounded">🡸</a>
                     </div>
                     <h2 class="col-12 text-center">{{poke.name}}'s available movements</h2>
                     <div class="col-12">
@@ -131,7 +131,7 @@
                 </div>
                 <div v-show="catchHim" class="row mb-3 p-3">
                     <div class ="absolute">
-                        <a href="#dos" class="btn pokebutton">🡸</a>
+                        <a href="#dos" class="btn rounded">🡸</a>
                     </div>
                     <h2 class="col-12 text-center">How to catch {{poke.name}}</h2>
                     <div v-show="zones.length>0" class="col-12">
@@ -160,7 +160,7 @@
                 </div>
                 <div v-show="advancedSettings" class="row mb-3 p-3">
                     <div class ="absolute">
-                        <a href="#dos" class="btn pokebutton">🡸</a>
+                        <a href="#dos" class="btn rounded">🡸</a>
                     </div>
                     <h2 class="col-12 text-center">{{poke.name}}'s advanced settings</h2>
                 </div>
